Add Google Cloud Architecture Cheetsheet

--- a/유용한-도구들.md
+++ b/유용한-도구들.md
@@ -19,3 +19,7 @@ https://ezgif.com/maker
 ## 개발자를 위한 무료 서비스 모음
 
 https://free-for.dev/#/
+
+## 구글 클라우드 아키텍쳐 치트시트
+
+https://googlecloudcheatsheet.withgoogle.com/architecture
